--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-week-list/timesheet-admin-week-list.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-week-list/timesheet-admin-week-list.component.html
@@ -12,7 +12,7 @@
         </app-timesheet-admin-week-list-view>
     </ng-container>
 
-    <app-bottom-action-bar bottombar
+    <app-bottom-action-bar bottombar [fab]="actionFab"
         [actions]="bottomActions">
     </app-bottom-action-bar>
 
