replace mat spinner with ion spinner

--- a/apps/kbtv-client/src/app/feature-modules/mission-modules/shared-mission/components/image-viewer/image-viewer.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/mission-modules/shared-mission/components/image-viewer/image-viewer.component.html
@@ -9,7 +9,7 @@
     (swipeleft)="nextImage()" 
     (load)="onCurrentImageLoaded()"/>
 
-  <mat-spinner [appHide]="!loadingImage.loading" color="accent"></mat-spinner>
+  <ion-spinner [appHide]="!loadingImage.loading" name="dots"></ion-spinner>
 </ng-container>
 
 <div *ngIf="images?.length" class="page-counter-container" [appHide]="toolbarHidden">
