--- a/apps/kbtv-client/src/app/feature-modules/request-log/request-log/request-queue-list/request-queue-list.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/request-log/request-log/request-queue-list/request-queue-list.component.html
@@ -15,7 +15,7 @@
         {{ queued.request.callerAction | actionDescription : ActionDescriptions}}
 
         <ng-template #dispatchedSpinner>
-            <span class="pl-2 pr-2"><mat-spinner left-side color="accent" diameter="24"></mat-spinner></span>  
+                <ion-spinner left-side class="pl-2 pr-2" name="circles"></ion-spinner>      
         </ng-template>
 
     </app-list-item>
