--- a/apps/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.scss
+++ b/apps/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.scss
@@ -4,19 +4,19 @@ mat-toolbar{
     background:transparent;
 }
 
-.custom-buttons, .primary-button, mat-spinner {
+.custom-buttons, .primary-button, ion-spinner {
     transition: 
         background-color 100ms linear, 
         border-radius 100ms linear, 
         color 100ms linear;
 }
 
-.overlay-nav{
+::ng-deep.main-top-nav-overlay{
     color:white;
     position:absolute;
     top:0;
     z-index:1;
-    .primary-button, mat-spinner {
+    .primary-button, ion-spinner {
         background: rgba(0,0,0,0.5);
         border-radius: 100%;
     }
