--- a/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details.component.html
@@ -4,7 +4,7 @@
 
         <img header appImageErrorPlaceholder *ngIf="vm.mission?.fileName; else addHeaderImage" 
             style="max-width:100%" alt="Forsidebilde" 
-            [src]="vm.mission | appFileUrl: FileFolder.MissionHeader"     
+            [src]="vm.mission.fileName | appFileUrl: FileFolder.MissionHeader"     
             (tap)="openImageViewer(vm.mission)"/>
 
         <app-mission-details-view content [mission]="vm.mission">
