--- a/apps/kbtv-client/src/app/shared-app/components/optimistic-loading-spinner/optimistic-loading-spinner.component.html
+++ b/apps/kbtv-client/src/app/shared-app/components/optimistic-loading-spinner/optimistic-loading-spinner.component.html
@@ -1,19 +1,25 @@
-<button mat-icon-button *ngIf="vm$ |  async; let vm" routerLink="/aktivitetslogg" 
-    [style.pointerEvents]="(vm.optimisticCount || !vm.isOnline) ? 'all' : 'none'">
-    <ng-container *ngIf="vm.loading && vm.isOnline; else offlineContent">
-         
+
+<ng-container *ngIf="vm$ |  async; let vm">
+
+    <button mat-icon-button  routerLink="/aktivitetslogg" *ngIf="vm.loading && vm.isOnline; else offlineContent"
+        [style.pointerEvents]="(vm.optimisticCount || !vm.isOnline) ? 'all' : 'none'">
+
         <span class="loading-count mat-body" *ngIf="vm.optimisticCount && vm.optimisticCount > 1">
             {{ vm.optimisticCount }}
         </span>
             
         <ion-spinner name="circles"></ion-spinner>
 
-    </ng-container> 
-
+    </button>
+    
     <ng-template #offlineContent>
-        <mat-icon *ngIf="vm.optimisticCount">
-            portable_wifi_off
-        </mat-icon>
+        <button mat-icon-button  routerLink="/aktivitetslogg" *ngIf="vm.optimisticCount"
+            [style.pointerEvents]="(vm.optimisticCount || !vm.isOnline) ? 'all' : 'none'">
+
+            <mat-icon> portable_wifi_off </mat-icon>
+
+        </button>
     </ng-template>
-</button>
+
+</ng-container>
 
