update ag material

--- a/apps/kbtv-client/src/app/feature-modules/mission-modules/shared-mission/components/search-bar/search-bar.component.scss
+++ b/apps/kbtv-client/src/app/feature-modules/mission-modules/shared-mission/components/search-bar/search-bar.component.scss
@@ -1,8 +1,9 @@
+@use '~@angular/material' as mat;
 @import '../../../../../../styles/variables';
 
 .search-bar {
     border:none;
-    background:mat-color($background, card);
+    background:mat.get-color-from-palette($background, card);
     
     div{
         border-bottom: 1px solid black;
