--- a/apps/kbtv-client/src/app/feature-modules/data-management/data-manager/data-property-picker/data-property-picker.component.scss
+++ b/apps/kbtv-client/src/app/feature-modules/data-management/data-manager/data-property-picker/data-property-picker.component.scss
@@ -1,3 +1,4 @@
+@use '~@angular/material' as mat;
 @import '../../../../../styles/variables';
 
 :host{
@@ -11,21 +12,21 @@
     box-sizing: border-box;
     .mat-form-field-wrapper{
       .mat-select-value{ 
-        color: mat-color($app-primary, default-contrast) !important;
+        color: mat.get-color-from-palette($app-primary, default-contrast) !important;
       }
             
       .mat-form-field-label {
         /*change color of label*/
-        color: mat-color($app-primary, default-contrast) !important;
+        color: mat.get-color-from-palette($app-primary, default-contrast) !important;
        }
       
       .mat-form-field-underline {
         /*change color of underline*/
-        background-color: mat-color($app-primary, default-contrast)!important;
+        background-color: mat.get-color-from-palette($app-primary, default-contrast)!important;
       } 
 
       .mat-select-arrow{
-        color: mat-color($app-primary, default-contrast) !important;
+        color: mat.get-color-from-palette($app-primary, default-contrast) !important;
       }
     }
 
