--- a/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.scss
+++ b/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/header-layout-skeleton/header-layout-skeleton.component.scss
@@ -1,3 +1,4 @@
+@use '~@angular/material' as mat;
 @import '../../../../../styles/variables';
 
 .content-container{
@@ -9,7 +10,7 @@
     .header-container{
         width:100%;
         text-align:center;
-        background:mat-color($background, disabled-button-toggle);
+        background:mat.get-color-from-palette($background, disabled-button-toggle);
         position:sticky;
         top:0;
         z-index:1;
