--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week-view/user-timesheet-week-view.component.scss
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week-view/user-timesheet-week-view.component.scss
@@ -1,3 +1,4 @@
+@use '~@angular/material' as mat;
 @import '../../../../../../styles/variables';
 
 :host{ 
@@ -29,10 +30,10 @@
   }
 
   .fade-line{
-    background-color: mat-color($foreground, divider); 
+    background-color: mat.get-color-from-palette($foreground, divider); 
     width: 1px;
     background: 
-      linear-gradient(to top, transparent 30px, mat-color($foreground, divider) calc(100% - 88px))
+      linear-gradient(to top, transparent 30px, mat.get-color-from-palette($foreground, divider) calc(100% - 88px))
 
   }
 
