--- a/apps/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.scss
+++ b/apps/kbtv-client/src/app/home/home-mission-card/home-mission-card.component.scss
@@ -1,3 +1,4 @@
+@use '~@angular/material' as mat;
 @import '../../../styles/variables';
 
 .mission-card, .mission-list{
@@ -9,7 +10,7 @@
 
 .mission-card{
     height:100%;
-    background-color:mat-color($background, card);
+    background-color:mat.get-color-from-palette($background, card);
     border-radius: 4px;
     margin: 0 12px;
 } 
