--- a/apps/kbtv-client/src/app/shared/components/bottom-action-bar/bottom-action-bar.component.scss
+++ b/apps/kbtv-client/src/app/shared/components/bottom-action-bar/bottom-action-bar.component.scss
@@ -1,3 +1,4 @@
+@use '~@angular/material' as mat;
 @import '../../../../styles/variables';
 
 .fab-container {
@@ -25,7 +26,7 @@
 .bottom-bar{
     background:transparent!important;
     padding:0!important;
-    color: mat-color($background, card);
+    color: mat.get-color-from-palette($background, card);
     height:var(--bottom-nav-height)!important;
 }
 
