--- a/apps/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.scss
+++ b/apps/kbtv-client/src/app/shared/components/main-skeleton/main-skeleton.component.scss
@@ -1,3 +1,4 @@
+@use '~@angular/material' as mat;
 @import '../../../../styles/variables';
 
 .main-container, .content-container{
@@ -10,7 +11,7 @@
     z-index:1;
     height:100%;
     width:100%;
-    background: mat-color($background, status-bar);
+    background: mat.get-color-from-palette($background, status-bar);
     flex-direction: row;
 }
 
@@ -20,7 +21,7 @@
     height:100%;
     width:100%;
     overflow:hidden;
-    background: mat-color($background, card);
+    background: mat.get-color-from-palette($background, card);
     flex-direction: column;
     flex: 1 1 0%;
 }
