--- a/apps/kbtv-client/src/styles/custom-theme.scss
+++ b/apps/kbtv-client/src/styles/custom-theme.scss
@@ -1,8 +1,8 @@
 
 // Custom Theming for Angular Material
 // For more information: https://material.angular.io/guide/theming
-//@use '~@angular/material' as mat;
-@import '~@angular/material/theming';
+@use '~@angular/material' as mat;
+// @import '~@angular/material/theming';
 // Plus imports for other components in your app.
 @import './_variables';
 
