split up desktop/mobile routes to allow lazy loading sidenav for mobile

--- a/apps/kbtv-client/src/styles/styles.scss
+++ b/apps/kbtv-client/src/styles/styles.scss
@@ -29,6 +29,8 @@ body {font-family: Roboto, "Helvetica Neue", sans-serif;overflow-x:hidden;}
   color: mat.get-color-from-palette($app-primary, lighter-contrast);
 }
 
+.bg-app{ background: mat.get-color-from-palette($background, status-bar) }
+
 .bg-card{
   background: mat.get-color-from-palette($background, card);
 }
