--- a/apps/kbtv-client/src/app/layout/main-nav/main-side-nav.component.scss
+++ b/apps/kbtv-client/src/app/layout/main-nav/main-side-nav.component.scss
@@ -2,7 +2,7 @@
 @import '../../../styles/variables';
 
 mat-sidenav-container{
-    background: mat.get-color-from-palette($background, status-bar);
+    background: transparent;
     position: unset!important
 }
 
@@ -29,3 +29,5 @@ mat-sidenav-content, div{
     box-sizing: border-box;
     display: flex;
 }
+
+  
