--- a/apps/kbtv-client/src/styles/custom-theme.scss
+++ b/apps/kbtv-client/src/styles/custom-theme.scss
@@ -15,23 +15,23 @@
 // Alternatively, you can import and @include the theme mixins for each component
 // that you are using.
 @include mat.core-theme($kbtv-client-theme); //
-@include mat.snack-bar-theme($kbtv-client-theme); //  d
-@include mat.sidenav-theme($kbtv-client-theme); // d
-@include mat.button-theme($kbtv-client-theme); // d
-@include mat.icon-theme($kbtv-client-theme); //d
-@include mat.toolbar-theme($kbtv-client-theme); // d
-@include mat.divider-theme($kbtv-client-theme); // d
-@include mat.dialog-theme($kbtv-client-theme); // d
-@include mat.autocomplete-theme($kbtv-client-theme); //
-@include mat.checkbox-theme($kbtv-client-theme); //
-@include mat.form-field-theme($kbtv-client-theme); //
-@include mat.input-theme($kbtv-client-theme); //
-@include mat.menu-theme($kbtv-client-theme); //
+@include mat.snack-bar-theme($kbtv-client-theme);
+@include mat.sidenav-theme($kbtv-client-theme);
+@include mat.button-theme($kbtv-client-theme); //
+@include mat.icon-theme($kbtv-client-theme); //
+@include mat.toolbar-theme($kbtv-client-theme); //
+@include mat.divider-theme($kbtv-client-theme); //
+@include mat.dialog-theme($kbtv-client-theme);
+@include mat.autocomplete-theme($kbtv-client-theme); 
+@include mat.checkbox-theme($kbtv-client-theme); 
+@include mat.form-field-theme($kbtv-client-theme); 
+@include mat.input-theme($kbtv-client-theme); 
+@include mat.menu-theme($kbtv-client-theme); 
 @include mat.radio-theme($kbtv-client-theme);
 @include mat.select-theme($kbtv-client-theme);
-@include mat.bottom-sheet-theme($kbtv-client-theme); // d
-@include mat.chips-theme($kbtv-client-theme); // d
-@include mat.slider-theme($kbtv-client-theme); // d
+@include mat.bottom-sheet-theme($kbtv-client-theme);
+@include mat.chips-theme($kbtv-client-theme);
+@include mat.slider-theme($kbtv-client-theme); 
 
 .cdk-virtual-scroll-content-wrapper{
   width:100%;
