set pointer events none on main top nav in overlay mode

--- a/apps/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.scss
+++ b/apps/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.scss
@@ -18,9 +18,11 @@ mat-toolbar{
     position:absolute;
     top:0;
     z-index:1;
+    pointer-events: none;
     button {
         background: rgba(0,0,0,0.5);
         border-radius: 100%;
+        pointer-events: auto;
     }
     .custom-buttons{
         background: rgba(0,0,0,0.5);
