--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-week-list/timesheet-admin-week-list-view/timesheet-admin-week-list-view.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/timesheet-admin-week-list/timesheet-admin-week-list-view/timesheet-admin-week-list-view.component.html
@@ -27,7 +27,8 @@
         <ng-container *cdkVirtualFor="let summary of summaries; trackBy: trackByWeek; templateCacheSize:0" >
             
             <app-swipe-card openWidth="82px" closedWidth="5px"
-                [lockPosition]="!isXs ? 'open' : summary.openHours === 0 ? 'close' : null">
+                [position]="summary.openHours === 0 ? null : isXs ? 'closed' : 'open'"
+                [isLocked]="!isXs || summary.openHours === 0">
                 
                 <div swipeContent matRipple class="hidden-swipe-content h-100"
                     [ngClass]="summary.openHours > 0 ? 'warn' : 'accent'" 
