--- a/apps/kbtv-client/src/app/shared/scam/optimistic-http-error-dialog/optimistic-http-error-dialog.component.html
+++ b/apps/kbtv-client/src/app/shared/scam/optimistic-http-error-dialog/optimistic-http-error-dialog.component.html
@@ -8,7 +8,7 @@
     
         <div class="mat-caption">Behandling mislykket</div>
     
-        <!-- {{ data.errorCommand.request.callerAction | actionDescription : ActionDescriptions}} -->
+        {{ errorRequest | requestDescription : AppRequestDescriberMap }}
     
     </app-list-item>
 
@@ -19,11 +19,11 @@
         </ul>
     </div>
 
-    <ng-container  *ngIf="data.canceledCommands?.length">
+    <ng-container  *ngIf="canceledCommands?.length">
 
-        <div class="mat-body-2 ml-5 mt-3">Påfølgende aktiviteter er kansellert ({{data.canceledCommands.length}})</div>
+        <div class="mat-body-2 ml-5 mt-3">Påfølgende aktiviteter er kansellert ({{canceledCommands.length}})</div>
 
-        <app-failed-command-list [commands]="data.canceledCommands">
+        <app-failed-command-list [commands]="canceledCommands">
     
         </app-failed-command-list>
 
