move model state prop translations to seperate const with plural and singular translations

--- a/apps/kbtv-client/src/app/feature-modules/data-management/data-manager/data-property-picker/data-property-picker.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/data-management/data-manager/data-property-picker/data-property-picker.component.html
@@ -1,7 +1,7 @@
 <mat-form-field color="accent" class="data-picker">
   <mat-label>Velg data</mat-label>
   <mat-select [ngModel]="selectedProperty" (ngModelChange)="changeProperty($event)" #select>
-    <mat-option *ngFor="let prop of properties" value="{{ prop }}">{{ prop | translate }}</mat-option>
+    <mat-option *ngFor="let prop of properties" value="{{ prop }}">{{ prop | translateModelProp }}</mat-option>
   </mat-select>
   <mat-hint *ngIf="propertyHints[select.value]">
       {{ propertyHints[select.value] }}
