support two lines on property picker hints by adding margin, and rewrite property hints

--- a/apps/kbtv-client/src/app/feature-modules/data-management/data-manager/data-property-picker/data-property-picker.component.scss
+++ b/apps/kbtv-client/src/app/feature-modules/data-management/data-manager/data-property-picker/data-property-picker.component.scss
@@ -6,7 +6,7 @@
 }
 
 ::ng-deep.data-picker{
-    margin:0px $gap-size * 6px;
+    margin:0px $gap-size * 6px $gap-size * 2px $gap-size * 6px;
     padding-bottom: $gap-size * 2px;
     flex: 1 1 0%;
     box-sizing: border-box;
