--- a/apps/kbtv-client/src/app/shared/scam/optimistic-http-error-dialog/optimistic-http-error-dialog.component.html
+++ b/apps/kbtv-client/src/app/shared/scam/optimistic-http-error-dialog/optimistic-http-error-dialog.component.html
@@ -8,7 +8,7 @@
     
         <div class="mat-caption">Behandling mislykket</div>
     
-        {{ errorRequest | requestDescription : AppRequestDescriberMap }}
+        {{ errorRequest | requestDescription : state : AppRequestDescriberMap }}
     
     </app-list-item>
 
@@ -23,7 +23,7 @@
 
         <div class="mat-body-2 ml-5 mt-3">Påfølgende aktiviteter er kansellert ({{canceledCommands.length}})</div>
 
-        <app-failed-command-list [commands]="canceledCommands">
+        <app-failed-command-list [commands]="canceledCommands" [state]="state">
     
         </app-failed-command-list>
 
