remove onback fn and use location.back with ability to override

--- a/apps/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.html
+++ b/apps/kbtv-client/src/app/shared/components/main-top-nav-bar/main-top-nav-bar.component.html
@@ -1,6 +1,6 @@
 <mat-toolbar #navBar *ngIf="config" [ngClass]="overlayMode ? 'main-top-nav-overlay' : ''">
 
-    <app-button class="primary-button" [config]="getPrimaryBtn(config)">
+    <app-button class="primary-button" [config]="primaryBtn">
     </app-button>
 
     <span class="mr-auto ellipsis">
