refactor swipe card positioning to fix desktop bug

--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/components/swipe-card/swipe-card.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/timesheet-admin/components/swipe-card/swipe-card.component.html
@@ -14,8 +14,8 @@
         closed_width: closedWidth
       }
     }"
-    (swiperight)="position = 'open'" 
-    (swipeleft)="position = 'closed'">
+    (swiperight)="changePosition('open')" 
+    (swipeleft)="changePosition('closed')">
     <ng-content>
       
     </ng-content>
