split up styles & use css vars for colors

--- a/apps/kbtv-client/src/app/feature-modules/login/login/login.component.scss
+++ b/apps/kbtv-client/src/app/feature-modules/login/login/login.component.scss
@@ -1,8 +1,6 @@
-@import '../../../../styles/variables';
-
 .image-container{
     background-image: url("/assets/login.jpg?");
-    background-color: $accent;
+    background-color: var(--accent-color);
     height:100%;  
     background-size: cover;
     background-repeat: no-repeat; 
