--- a/apps/kbtv-client/src/app/shared/scam/optimistic-http-error-dialog/optimistic-http-error-dialog.component.scss
+++ b/apps/kbtv-client/src/app/shared/scam/optimistic-http-error-dialog/optimistic-http-error-dialog.component.scss
@@ -1,7 +1,8 @@
+@use '~@angular/material' as mat;
 @import '../../../../styles/variables';
 
 .error-container{
-    background: $warn-light;
+    background: mat.get-color-from-palette($app-warn, lighter);
     border-radius: 6px;
     margin: 0px 12px;
     padding: 12px;
