--- a/apps/kbtv-client/src/app/feature-modules/data-management/data-manager/data-property-picker/data-property-picker.component.scss
+++ b/apps/kbtv-client/src/app/feature-modules/data-management/data-manager/data-property-picker/data-property-picker.component.scss
@@ -1,32 +1,29 @@
-@use '~@angular/material' as mat;
-@import '../../../../../styles/variables';
-
 :host{
   display: flex;
 }
 
 ::ng-deep.data-picker{
-    margin:0px $gap-size * 6px;
-    padding-bottom: $gap-size * 2px;
+    margin:0px calc(var(--gap-size) * 6);
+    padding-bottom: calc(var(--gap-size) * 2);
     flex: 1 1 0%;
     box-sizing: border-box;
     .mat-form-field-wrapper{
       .mat-select-value{ 
-        color: mat.get-color-from-palette($app-primary, default-contrast) !important;
+        color: var(--primary-contrast) !important;
       }
             
       .mat-form-field-label {
         /*change color of label*/
-        color: mat.get-color-from-palette($app-primary, default-contrast) !important;
+        color: var(--primary-contrast) !important;
        }
       
       .mat-form-field-underline {
         /*change color of underline*/
-        background-color: mat.get-color-from-palette($app-primary, default-contrast)!important;
+        background-color: var(--primary-contrast)!important;
       } 
 
       .mat-select-arrow{
-        color: mat.get-color-from-palette($app-primary, default-contrast) !important;
+        color: var(--primary-contrast)!important;
       }
     }
 
