--- a/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week-view/user-timesheet-week-view.component.scss
+++ b/apps/kbtv-client/src/app/feature-modules/timesheet-modules/user-timesheet-week/user-timesheet-week/user-timesheet-week-view/user-timesheet-week-view.component.scss
@@ -3,7 +3,7 @@
 
 :host{ 
   height:100%; display:block; overflow-y: auto; 
-  background: linear-gradient(to top, $accent 10px, transparent calc(100% - 88px));
+  background: linear-gradient(to top, var(--accent-color) 10px, transparent calc(100% - 88px));
 }
 
 .week-view-container { 
