--- a/apps/kbtv-client/src/app/shared/components/bottom-action-bar/bottom-action-bar.component.scss
+++ b/apps/kbtv-client/src/app/shared/components/bottom-action-bar/bottom-action-bar.component.scss
@@ -11,7 +11,7 @@
         circle closest-corner at 35px 1%, 
         rgba(0, 0, 0, 0) 0, 
         rgba(0, 0, 0, 0) 35px, 
-        $accent 36px, $accent 37px
+        var(--accent-color) 36px, var(--accent-color) 37px
     );
 }
 
@@ -31,7 +31,7 @@
 }
 
 .bottom-bar-side{
-    background:$accent;
+    background:var(--accent-color);
     height:100%;
     padding:8px;
     padding-bottom:var(--bottom-nav-padding)!important;
