hide image button for employers

--- a/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details.component.html
+++ b/apps/kbtv-client/src/app/feature-modules/mission-modules/mission-list/mission-details/mission-details.component.html
@@ -14,7 +14,7 @@
     </app-header-layout-skeleton>
 
     <app-bottom-action-bar bottombar
-        [fab]="actionFab" 
+        [fab]="([Roles.Oppdragsgiver] | ifRole) ? null : actionFab" 
         [actions]="vm.bottomActions">
     </app-bottom-action-bar>
 
